# WhoIntedMe

./: .black  .flake8  README.md  app.py  pyproject.toml
.github/ISSUE_TEMPLATE/: standard.md
.github/workflows/: python-lint.yml
back/: __init__.py  api.py  models.py  views.py
front/: __init__.py  api.py  models.py  views.py
front/components/: App.js
front/static/: index.js
front/templates/: base.html  home.html  login.html  profile.html  sign_up.html
instance/: database.db
test/: endpoint.py  test_api.py
